--- a/app/src/main/res/layout/fragment_now.xml
+++ b/app/src/main/res/layout/fragment_now.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.421"
+        tools:srcCompat="@drawable/ic_1" />
 
     <TextView
         android:id="@+id/tv_temperature"
