--- a/app/src/main/res/layout/fragment_now.xml
+++ b/app/src/main/res/layout/fragment_now.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/big_margin"
-        android:textSize="@dimen/default_text_size"
+        android:textSize="@dimen/big_text_size"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
-        android:textSize="@dimen/default_text_size"
+        android:textSize="@dimen/big_text_size"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
