--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     //Text sizes
-    <dimen name="default_text_size">20sp</dimen>
+    <dimen name="default_text_size">14sp</dimen>
+    <dimen name="big_text_size">20sp</dimen>
 
     //Margins
     <dimen name="default_margin">16dp</dimen>
