Code refactoring and wrong input validation

--- a/app/src/main/res/layout/item_daily_forecast.xml
+++ b/app/src/main/res/layout/item_daily_forecast.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="64dp">
 
     <ImageView
         android:id="@+id/iw_conditions"
@@ -20,34 +20,34 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin"
         android:layout_marginEnd="@dimen/default_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/default_text_size"
         app:layout_constraintStart_toEndOf="@+id/iw_conditions"
         app:layout_constraintTop_toTopOf="@+id/iw_conditions"
-        android:textSize="@dimen/default_text_size"
-        android:textColor="@color/black"
         tools:text="14:00" />
 
     <TextView
         android:id="@+id/tv_conditions_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/iw_conditions"
-        app:layout_constraintStart_toEndOf="@+id/iw_conditions"
         android:layout_marginStart="@dimen/default_margin"
         android:layout_marginEnd="@dimen/default_margin"
-        android:textSize="@dimen/default_text_size"
         android:textColor="@color/black"
+        android:textSize="@dimen/default_text_size"
+        app:layout_constraintBottom_toBottomOf="@+id/iw_conditions"
+        app:layout_constraintStart_toEndOf="@+id/iw_conditions"
         tools:text="Fog" />
 
     <TextView
         android:id="@+id/tv_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:textColor="@color/black"
+        android:textSize="@dimen/default_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="@dimen/big_margin"
-        android:textSize="@dimen/default_text_size"
-        android:textColor="@color/black"
         tools:text="11C / 19C" />
 
 
