--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -8,7 +8,7 @@
     tools:ignore="ContentDescription">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/daily_forecast_list"
+        android:id="@+id/daily_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
